<resources>
    <string name="app_name">ART</string>
    <string name="title_activity_view_records">ViewRecordsActivity</string>
    <string name="button_switch_to_add">Add a New Record</string>
    <string name="button_switch_to_view">View Prior Records</string>
    <string name="view_record_heading">All Records</string>
    <string name="add_record_heading">Add a Record</string>
    <string name="add_date">Report Date (DD/MM/YYYY)</string>
    <string name="date_picker_image_description">Date Picker</string>
    <string name="string_isVictory">Victory</string>
    <string name="string_isSetback">Setback</string>
    <string name="add_record">Add Record</string>
    <string name="tv_mood">Mood</string>
    <string name="tv_location">Location</string>
    <string name="tv_time">Time</string>
    <string name="action_home">Home</string>
    <string name="action_add">Add</string>
    <string name="action_settings">Settings</string>
    <string name="action_trends">Trends</string>
    <string name="title_activity_pin">PinActivity</string>

</resources>
